# Process this file with automake to create Makefile.in

bin_PROGRAMS = ssimsg ssimsgd

ssimsg_SOURCES =                        \
        ssimsg.c

ssimsgd_SOURCES =                       \
        ssimsgd.c

ssimsg_CPPFLAGS =                       \
        -I$(top_srcdir)                 \
        -I$(top_srcdir)/include         \
        -I$(top_srcdir)/lib

ssimsgd_CPPFLAGS =                      \
        -I$(top_srcdir)                 \
        -I$(top_srcdir)/include         \
        -I$(top_srcdir)/lib
