# Process this file with automake to create Makefile.in

bin_PROGRAMS = ssimsg ssieventmonitor

ssimsg_SOURCES =                        \
        ssimsg.cpp

ssimsg_CPPFLAGS =                       \
        -I$(top_srcdir)                 \
        -I$(top_srcdir)/include         \
        -I$(top_srcdir)/lib

ssieventmonitor_SOURCES =                 \
        ssieventmonitor.cpp

ssieventmonitor_CPPFLAGS =                \
        -I$(top_srcdir)                 \
        -I$(top_srcdir)/include         \
        -I$(top_srcdir)/lib

