# Process this file with automake to create Makefile.in

noinst_LTLIBRARIES = liborom.la

liborom_la_SOURCES =            \
    orom.c                      \
    orom.h

liborom_la_CPPFLAGS =           \
        -I$(top_srcdir)         \
        -I$(top_srcdir)/include \
        -I$(top_srcdir)/lib
